Fixed the wrapping of the listed books

--- a/static/styles.css
+++ b/static/styles.css
@@ -9,27 +9,29 @@ form{
   display:table;
 }
 
-.center {
-  /* text-align: -webkit-center; */
-  display: flex;
-  justify-content: center
-}
-
-.container a {
-  display: table-cell;
-}
 
 h1 {
     color: #333;
 }
 
-.container { 
+.container-wrap {
+}
+
+.container-wrapper { 
+    text-align: center;
     width: 70%;
+    min-width: min(925px, 100%);
+}
+
+.container { 
+    text-align: center;
+    display:table;
+  /* text-align: -webkit-center; */
+    text-align: center;
     border: 1px solid #ccc;
     padding: 20px;
     margin-bottom: 20px;
     vertical-align: middle;
-    display:table;
 }
 
 .label {
@@ -116,8 +118,10 @@ h1 {
 }
 
 
-
-
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 /* The switch - the box around the slider */
